# ramayana-openframeworks

./: .gitignore  CMakeLists.txt  Makefile  README.md  addons.make  config.make  handFighter.cbp  handFighter.layout  ramayana.cbp  ramayana.layout
assets/: ayodhya.xcf
src/: colorfilters.cpp  colorfilters.h  constants.h  filter.h  findconnected.cpp  findconnected.h  game.cpp  game.h  main.cpp  matrixops.cpp  matrixops.h  ofApp.cpp  ofApp.h  patternrecognizer.cpp  patternrecognizer.h  rakshas.cpp  rakshas.h  rama.cpp  rama.h  soundrecognizer.cpp  soundrecognizer.h  test_collision.cpp
